<resources>
    <string name="app_name">moaiPay</string>
    <string name="app_name_jp">もあいペイ</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="tab_text_5">Tab 5</string>
    <string name="button_new_moai">新しい模合を作る</string>
    <string name="action_phone_verify">認証コード取得</string>
    <string name="cannot_connect">接続できません</string>
    <string name="location">場所</string>
    <string name="event_time">時間</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_start_tutorial">StartTutorialActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="next_tutorial">次へ\nNEXT</string>
    <string name="regist_profile">始める\nSTART</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_tutorial">スキップ\nSKIP</string>
    <string name="profile_image">プロフィール写真</string>
    <string name="chat">チャット</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tutorial_top_1">タップでらくらく入力</string>
    <string name="tutorial_top_2">出欠状況もひと目でわかる</string>
    <string name="tutorial_top_3">さらに、チャット機能付き！</string>
    <string name="tutorial_bottom_1">面倒な手書きがタップで完了！\n顔写真付きなので記入時に間違える心配がなくなります！</string>
    <string name="tutorial_bottom_2">人数が増えると管理が面倒だった出欠状況の確認もひと目でわかる！\nチャットと連動して返信も簡単。</string>
    <string name="tutorial_bottom_3">チャット機能が付いているので、\nもあいの開催情報がすぐ送信できる！\n出欠確認の連絡も簡単！</string>
    <string name="moai_create">もあいグループ作成</string>
    <string name="back">戻る</string>
    <string name="confirm">確認</string>
    <string name="moai_image">グループ画像</string>
    <string name="moai_name">もあい名</string>
    <string name="please_input_moai_name">もあい名を入れてください</string>
    <string name="administrator">管理者</string>
    <string name="administrator2">管理者②</string>
    <string name="administrator3">管理者③</string>
    <string name="member">メンバー</string>
    <string name="manual_input">手入力で追加する　＋</string>
    <string name="select_input">連絡先から招待する　＞</string>
    <string name="moai_amount">もあい代</string>
    <string name="moai_extra">利息</string>
    <string name="moai_payment">積立</string>
    <string name="payment_name">積立名</string>
    <string name="payment_price">積立単価</string>
    <string name="payment_summary">積立合計</string>
    <string name="pay_type">場代タイプ</string>
    <string name="pay_type1">割り勘</string>
    <string name="pay_type2">会費制</string>
    <string name="pay_type3">親持ち</string>
    <string name="check_attend_key">attend</string>
    <string name="check_recieve_moai_key">recieveMoai</string>
    <string name="title_activity_moai_detail_regist">MoaiDetailRegistActivity</string>
    <string name="save">完了</string>
    <string name="moai_parent">幹事</string>
    <string name="event_date">開催日</string>
    <string name="event_start_time">開催時間</string>
    <string name="moai_place">開催場所</string>
    <string name="place_url">店舗（地図）URL</string>
    <string name="moai_comment_placeholder">開催場所などの補足情報</string>
    <string name="moai_place_url_placeholder">http://itmail-okinawa.co.jp</string>
    <string name="moai_comment">コメント</string>

</resources>
