<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipChildren="true"
    android:clipToPadding="true"
    tools:context=".activity.MoaiRegistActivity">

    <FrameLayout
        android:id="@+id/barHeader"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="#F4F4F4">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/back"
            android:textColor="@color/colorBeerDark" />

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/moai_create"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/btnSaveMoai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="10dp"
            android:text="完了"
            android:textColor="@color/colorBeerDark" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/barHeader"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <LinearLayout
                android:id="@+id/containerImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moai_image"
                        android:textColor="#3E3E3E"
                        android:textSize="18sp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgMoai"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        app:srcCompat="@drawable/popup_background" />

                </FrameLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/containerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moai_name"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="#3E3E3E"
                    android:text="@string/moai_name" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/containerAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/administrator"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="#3E3E3E"
                    android:text="@string/administrator" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="10dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:id="@+id/containerAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/administrator2"
                        android:textColor="#3E3E3E"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtSubAdmin1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:textColor="#3E3E3E"
                        android:text="@string/administrator" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginVertical="10dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/administrator3"
                        android:textColor="#3E3E3E"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtSubAdmin2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:textColor="#3E3E3E"
                        android:text="@string/administrator" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/containerMembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/member"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />

                <include
                    layout="@layout/layout_members_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/containerAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moai_amount"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="10,000"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moai_extra"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtExtra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="1,000"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/containerPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moai_payment"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/containerPayment1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:text="@string/payment_name"
                            android:textColor="#3E3E3E"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/txtPaymentName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="積立名"
                            android:textColor="#3E3E3E"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:text="@string/payment_price"
                            android:textColor="#3E3E3E"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/txtPaymentPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="1,000"
                            android:textColor="#3E3E3E"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:text="@string/payment_summary"
                            android:textColor="#3E3E3E"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/txtPaymentSum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="#3E3E3E"
                            android:textSize="18sp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/containerPayType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_type"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblPayType1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/pay_type1"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="会費（出席者）"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtAttendPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="#3E3E3E"
                    android:text="10,000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="会費（欠席者）"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtAbsentPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="#3E3E3E"
                    android:text="5,000"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>